--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-	"name": "frakto-lint",
+	"name": "@frakto/coding-standards",
+	"productName": "Frakto Coding Standards",
 	"version": "1.0.0",
+	"description": "Frakto coding standards for various languages.",
+	"author": "Frakto Team",
+	"license": "MIT",
 	"type": "module",
 	"private": true,
-	"bin": {
-		"frakto-lint": "./index.js"
-	},
+	"workspaces": [
+		"common",
+		"css",
+		"html",
+		"js",
+		"php"
+	],
 	"devDependencies": {
-		"@eslint/js": "^9.33.0",
-		"eslint": "^9.33.0",
-		"eslint-plugin-jsdoc": "^54.0.0",
-		"globals": "^16.3.0",
-		"postcss": "^8.5.6",
-		"postcss-scss": "^4.0.9",
-		"prettier": "^3.3.3",
-		"typescript-eslint": "^8.39.1"
+		"prettier": "^3.3.3"
 	}
 }
