chore: udpate vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
 	// Formater
-	"frakto.enableDiagnostics": false,
+	"frakto.enableDiagnostics": true,
 
 	// Window color customization
 	"workbench.colorCustomizations": {
