--- a/packages/eslint-plugin-frakto/package.json
+++ b/packages/eslint-plugin-frakto/package.json
@@ -12,6 +12,8 @@
 		"@eslint/js": "^9.33.0",
 		"comment-parser": "^1.4.0",
 		"eslint": "^9.33.0",
+		"eslint-plugin-json": "^3.1.0",
+		"eslint-plugin-package-json":"^0.54.0",
 		"globals": "^16.3.0",
 		"typescript-eslint": "^8.39.0"
 	}
