--- a/packages/frakto-eslint-plugin/package.json
+++ b/packages/frakto-eslint-plugin/package.json
@@ -1,19 +1,19 @@
 {
-	"name": "@frakto/eslint-plugin-frakto",
-	"productName": "Frakto ESLint Plugin",
+	"name": "@frakto/frakto-eslint-plugin",
 	"version": "1.0.0",
+	"private": true,
 	"description": "ESLint plugin for Frakto coding standards.",
 	"author": "Frakto Team",
 	"license": "MIT",
 	"type": "module",
-	"private": true,
+	"types": "index.d.ts",
 	"main": "./index.js",
 	"peerDependencies": {
 		"@eslint/js": "^9.33.0",
 		"comment-parser": "^1.4.0",
 		"eslint": "^9.33.0",
 		"eslint-plugin-json": "^3.1.0",
-		"eslint-plugin-package-json":"^0.54.0",
+		"eslint-plugin-package-json": "^0.54.0",
 		"globals": "^16.3.0",
 		"typescript-eslint": "^8.39.0"
 	}
